Fixed overflow-y issue caused by flex

--- a/src/app/css/main.css
+++ b/src/app/css/main.css
@@ -53,7 +53,7 @@ body > * {
   padding: 0;
 
   /* Flex! Cool stuff. */
-  /*display: flex;*/
+  display: flex;
   flex-flow: column;
 
   position: absolute;
